GNOME Bugzilla – Bug 442263
Open only one preferences dialog window
Last modified: 2010-12-04 13:51:57 UTC
## Problem ## Nautilus open multiple preferences dialog windows on demand ## Current benhavior ## 1. Choose Edit -> Preference (or choose System->Prefs->File Manag. or run nautilus-file-management-properties) 2. Nautilus preferences dialog is showed 3. Re-choose Edit -> Preferences 4. A new preferences dialog is showed 5. again and again and again ## Expected behavior ## Point 4 of previous list should be "Move previously opened dialog on foreground and focus it"
Confirming.
Created attachment 118155 [details] [review] [PATCH] Only display one properties window. src/nautilus-file-management-properties-main.c | 3 +- src/nautilus-file-management-properties.c | 91 +++++++++++++----------- 2 files changed, 52 insertions(+), 42 deletions(-)
Review of attachment 118155 [details] [review]: This needs some more work, as we don't use libglade anymore.
Re-based against 2.91.x, still bugged :(
I just pushed a fix to master for this; closing as FIXED.